--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -36,6 +36,21 @@ mat-slide-toggle {
   color: var(--text-color); /* Dynamic text color */
 }
 
+/* Language switcher styles */
+.language-switcher {
+  margin-left: 20px;
+  select {
+    padding: 0.5rem;
+    font-size: 1rem;
+    background-color: var(--container-background-color);
+    color: var(--text-color);
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+  }
+}
+
 /* Body and background colors */
 body {
   background-color: var(--background-color); /* Background based on the theme */
