--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,44 +2,70 @@
   <div class="sign-in-form-container">
     <mat-card>
       <div class="title">
-        <h3>Sign In</h3>
+        <h3 *ngIf="currentLanguage === 'en'">Sign In</h3>
+        <h3 *ngIf="currentLanguage === 'es'">Iniciar sesión</h3>
+
         <p>
-          Don’t have an account yet? <a routerLink="/register" class="sign-up-link">Sign Up</a>
+          <span *ngIf="currentLanguage === 'en'">
+            Don’t have an account yet? <a routerLink="/register" class="sign-up-link">Sign Up</a>
+          </span>
+          <span *ngIf="currentLanguage === 'es'">
+            ¿No tienes una cuenta? <a routerLink="/register" class="sign-up-link">Regístrate</a>
+          </span>
         </p>
       </div>
       <mat-card-content>
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
-            <label for="email" class="input-label">Email Address</label>
+            <label for="email" class="input-label">
+              <span *ngIf="currentLanguage === 'en'">Email Address</span>
+              <span *ngIf="currentLanguage === 'es'">Dirección de correo electrónico</span>
+            </label>
             <mat-form-field appearance="outline" class="full-width">
-              <mat-label>Email Address</mat-label>
+              <mat-label *ngIf="currentLanguage === 'en'">Email Address</mat-label>
+              <mat-label *ngIf="currentLanguage === 'es'">Dirección de correo electrónico</mat-label>
               <input id="email" matInput placeholder="Enter email address" formControlName="email" />
               <mat-error *ngIf="loginForm.get('email')?.touched && loginForm.get('email')?.invalid">
-                Please enter a valid email address
+                <span *ngIf="currentLanguage === 'en'">Please enter a valid email address</span>
+                <span *ngIf="currentLanguage === 'es'">Por favor ingrese una dirección de correo válida</span>
               </mat-error>
             </mat-form-field>
           </div>
 
           <div class="form-group">
-            <label for="password" class="input-label">Your Password</label>
+            <label for="password" class="input-label">
+              <span *ngIf="currentLanguage === 'en'">Your Password</span>
+              <span *ngIf="currentLanguage === 'es'">Tu contraseña</span>
+            </label>
             <mat-form-field appearance="outline" class="full-width">
-              <mat-label>Password</mat-label>
+              <mat-label *ngIf="currentLanguage === 'en'">Password</mat-label>
+              <mat-label *ngIf="currentLanguage === 'es'">Contraseña</mat-label>
               <input id="password" matInput [type]="hide ? 'password' : 'text'" placeholder="Enter your password" formControlName="password" />
               <button mat-icon-button matSuffix (click)="hide = !hide" type="button">
                 <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
               </button>
               <mat-error *ngIf="loginForm.get('password')?.touched && loginForm.get('password')?.invalid">
-                Password is required
+                <span *ngIf="currentLanguage === 'en'">Password is required</span>
+                <span *ngIf="currentLanguage === 'es'">Se requiere contraseña</span>
               </mat-error>
             </mat-form-field>
           </div>
 
           <div class="login-info">
-            <mat-checkbox>Remember me</mat-checkbox>
-            <a routerLink="/forgot-password" class="forgot-password-link">Forgot Password?</a>
+            <mat-checkbox>
+              <span *ngIf="currentLanguage === 'en'">Remember me</span>
+              <span *ngIf="currentLanguage === 'es'">Recuérdame</span>
+            </mat-checkbox>
+            <a routerLink="/forgot-password" class="forgot-password-link">
+              <span *ngIf="currentLanguage === 'en'">Forgot Password?</span>
+              <span *ngIf="currentLanguage === 'es'">¿Olvidaste tu contraseña?</span>
+            </a>
           </div>
 
-          <button mat-raised-button class="submit-btn" type="submit" [disabled]="loginForm.invalid">Sign In</button>
+          <button mat-raised-button class="submit-btn" type="submit" [disabled]="loginForm.invalid">
+            <span *ngIf="currentLanguage === 'en'">Sign In</span>
+            <span *ngIf="currentLanguage === 'es'">Iniciar sesión</span>
+          </button>
         </form>
       </mat-card-content>
     </mat-card>
